--- a/src/pages/market/customGallery.css
+++ b/src/pages/market/customGallery.css
@@ -3,9 +3,16 @@
   width: 100%;
   height: 100%;
 }
-
 .custom-thumbnail img {
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+.image-gallery > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.image-gallery-thumbnails-wrapper {
+  background-color: #1e1e1e;
 }
