--- a/src/pages/market/customGallery.css
+++ b/src/pages/market/customGallery.css
@@ -1,7 +1,7 @@
 .custom-image img {
+  width: 100vw;
+  height: 40vh;
   object-fit: cover;
-  width: 100%;
-  height: 100%;
 }
 .custom-thumbnail img {
   object-fit: cover;
